--- a/openlane/user_proj_example/macro_placement.cfg
+++ b/openlane/user_proj_example/macro_placement.cfg
@@ -3,17 +3,17 @@ AND2X2 38.4 29.97 N
 AOI21X1 38.4 36.63 N
 AOI22X1 38.4 43.29 N
 BUFX2 38.4 49.95 N
-HAX1 38.4 56.61 N
-INV 38.4 63.27 N
-INVX1 38.4 69.93 N
-INVX2 38.4 76.59 N
-INVX4 38.4 83.25 N
-INVX8 38.4 89.91 N
-MUX2X1 38.4 96.57 N
-NAND2X1 38.4 103.23 N
-NAND3X1 38.4 109.89 N
-NOR2X1 38.4 116.55 N
-OAI21X1 38.4 123.21 N
-OAI22X1 38.4 129.87 N
-OR2X1 38.4 136.53 N
-XNOR2X1 38.4 143.19 N
+INV 38.4 56.61 N
+INVX1 38.4 63.27 N
+INVX2 38.4 69.93 N
+INVX4 38.4 76.59 N
+INVX8 38.4 83.25 N
+MUX2X1 38.4 89.91 N
+NAND2X1 38.4 96.57 N
+NAND3X1 38.4 103.23 N
+NOR2X1 38.4 109.89 N
+OAI21X1 38.4 116.55 N
+OAI22X1 38.4 123.21 N
+OR2X1 38.4 129.87 N
+OR2X2 38.4 136.53 N
+XOR2X1 38.4 143.19 N
