--- a/openlane/user_proj_example/macro_placement.cfg
+++ b/openlane/user_proj_example/macro_placement.cfg
@@ -7,13 +7,9 @@ INV 38.4 56.61 N
 INVX1 38.4 63.27 N
 INVX2 38.4 69.93 N
 INVX4 38.4 76.59 N
-INVX8 38.4 83.25 N
-MUX2X1 38.4 89.91 N
-NAND2X1 38.4 96.57 N
-NAND3X1 38.4 103.23 N
-NOR2X1 38.4 109.89 N
-OAI21X1 38.4 116.55 N
-OAI22X1 38.4 123.21 N
-OR2X1 38.4 129.87 N
-OR2X2 38.4 136.53 N
-XOR2X1 38.4 143.19 N
+MUX2X1 38.4 83.25 N
+NAND2X1 38.4 89.91 N
+NAND3X1 38.4 96.57 N
+NOR2X1 38.4 103.23 N
+OR2X2 38.4 109.89 N
+XNOR2X1 38.4 116.55 N
