--- a/openlane/user_proj_example/macro_placement.cfg
+++ b/openlane/user_proj_example/macro_placement.cfg
@@ -5,15 +5,19 @@ AOI22X1 38.4 43.29 N
 BUFX2 38.4 49.95 N
 BUFX4 38.4 56.61 N
 CLKBUF1 38.4 63.27 N
-INV 38.4 69.93 N
-INVX1 38.4 76.59 N
-INVX2 38.4 83.25 N
-INVX4 38.4 89.91 N
-INVX8 38.4 96.57 N
-MUX2X1 38.4 103.23 N
-NAND2X1 38.4 109.89 N
-NAND3X1 38.4 116.55 N
-OR2X1 38.4 123.21 N
-OR2X2 38.4 129.87 N
-XNOR2X1 38.4 136.53 N
-XOR2X1 38.4 143.19 N
+CLKBUF2 38.4 69.93 N
+INV 38.4 76.59 N
+INVX1 38.4 83.25 N
+INVX2 38.4 89.91 N
+INVX4 38.4 96.57 N
+INVX8 38.4 103.23 N
+MUX2X1 38.4 109.89 N
+NAND2X1 38.4 116.55 N
+NAND3X1 38.4 123.21 N
+NOR2X1 38.4 129.87 N
+OAI21X1 38.4 136.53 N
+OAI22X1 38.4 143.19 N
+OR2X1 38.4 149.85 N
+OR2X2 38.4 156.51 N
+XNOR2X1 38.4 163.17 N
+XOR2X1 38.4 169.83 N
